# Parking_App

./: .firebaserc  CHANGELOG.md  Cargo.toml  README.md  database.rules.json  firebase.json  package-lock.json  package.json
.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
cd my-napi-project/: Cargo.toml  index.d.ts  package-lock.json  package.json
cd my-napi-project/.github/workflows/: CI.yml
cd my-napi-project/npm/darwin-x64/: README.md  package.json
cd my-napi-project/npm/linux-x64-gnu/: README.md  package.json
cd my-napi-project/npm/win32-arm64-msvc/: README.md  package.json
cd my-napi-project/npm/win32-ia32-msvc/: README.md  package.json
cd my-napi-project/npm/win32-x64-msvc/: README.md  package-lock.json  package.json
cd my-napi-project/src/: lib.rs
functions/: index.js  package-lock.json
public/: index.html
src/: App.js  Firebase.js  index.js  lib.rs
src/components/: Home.js  Navbar.js  ParkingSpot.js
src/pages/: CampusAreaSelection.js  Home.js  ParkingArea.js  Reservation.js
